--- a/style.css
+++ b/style.css
@@ -1,7 +1,101 @@
 @font-face {
     font-family:"monofonto" ;
     src: url(polices/monofonto/monofonto.otf);
-    
+}
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:900i');
+
+* {
+  box-sizing: border-box;
+}
+
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.nav-item {
+    display: flex;
+    padding: 10px 45px;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+    color: white;
+    background: #40A497;
+    transition: 1s;
+    box-shadow: 6px 6px 0 black;
+    transform: skewX(-15deg);
+}
+
+.nav-item:focus {
+   outline: none; 
+}
+
+.nav-item:hover {
+    transition: 0.5s;
+    box-shadow: 10px 10px 0 #FBC638;
+}
+
+.nav-item span:nth-child(2) {
+    transition: 0.5s;
+    margin-right: 0px;
+}
+
+.nav-item:hover  span:nth-child(2) {
+    transition: 0.5s;
+    margin-right: 45px;
+}
+
+  span {
+    transform: skewX(15deg) 
+  }
+
+  span:nth-child(2) {
+    width: 20px;
+    margin-left: 30px;
+    position: relative;
+    top: 12%;
+  }
+  
+/**************SVG****************/
+
+path.one {
+    transition: 0.4s;
+    transform: translateX(-60%);
+}
+
+path.two {
+    transition: 0.5s;
+    transform: translateX(-30%);
+}
+
+.nav-item:hover path.three {
+    animation: color_anim 1s infinite 0.2s;
+}
+
+.nav-item:hover path.one {
+    transform: translateX(0%);
+    animation: color_anim 1s infinite 0.6s;
+}
+
+.nav-item:hover path.two {
+    transform: translateX(0%);
+    animation: color_anim 1s infinite 0.4s;
+}
+
+/* SVG animations */
+
+@keyframes color_anim {
+    0% {
+        fill: white;
+    }
+    50% {
+        fill: #FBC638;
+    }
+    100% {
+        fill: white;
+    }
 }
 
 .chaine {
@@ -33,13 +127,13 @@ body {
     justify-content: space-around;
 }
 
-.nav-item {
+/*.nav-item {
     display: flex;
     border-radius: 30px;
     padding: 10px 30px 10px 30px;
     background: #757575; 
     color: black;
-}
+}*/
 
 .TKT{
     overflow: hidden;
@@ -65,11 +159,11 @@ body {
 /* Move it (define the animation) */
 @-moz-keyframes TKT {
  0%   { -moz-transform: translateX(100%); }
- 100% { -moz-transform: translateX(0%); }
+ 100% { -moz-transform: translateX(100%); }
 }
 @-webkit-keyframes TKT {
  0%   { -webkit-transform: translateX(100%); }
- 100% { -webkit-transform: translateX(0%); }
+ 100% { -webkit-transform: translateX(100%); }
 }
 @keyframes TKT {
  0%   { 
