--- a/style.css
+++ b/style.css
@@ -149,6 +149,11 @@ body {
     color: black;
 }*/
 
+.mecano {
+    width: 25%;
+    float: left;
+}
+
 .TKT{
     overflow: hidden;
     position: relative;
@@ -156,10 +161,11 @@ body {
 .TKT h3
 { 
     color: white;
-    width: 50%;
+    width: 60%;
     height: 100%;
-    margin: 0;
+    margin: 0%;
     line-height: 50px;
+    padding-right: 20%;
     text-align: center; 
  /* Starting position */
  -moz-transform:translateX(100%);
