--- a/style.css
+++ b/style.css
@@ -5,21 +5,9 @@
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:900i');
 
-* {
-  box-sizing: border-box;
+.findgarage {
+    background-color: black;
 }
-
-#map {
-    height: 100%;
-  }
-  
-  /* Optional: Makes the sample page fill the window. */
-  html,
-  body {
-    height: 80%;
-    margin: 20;
-    padding: 20;
-  }
 
 h2 {
   font-size: 25px;
