--- a/style.css
+++ b/style.css
@@ -1,221 +1,144 @@
-@font-face {
-    font-family:"monofonto";
-    src: url(polices/monofonto/monofonto.otf);
+/* Variables */
+:root {
+  --primary-color: #0099FF;
 }
 
-@font-face {
-    font-family:"starboard";
-    src: url(polices/starboard/Starboard.otf)
-}
-
-
-@import url('https://fonts.googleapis.com/css?family=Poppins:900i');
-
-.findgarage {
-    background-color: black;
-}
-
-header {
-    color: whitesmoke;
-    text-align: center;
-    font-family: starboard;
-}
-
-h2 {
-  font-size: 25px;
-  color: aliceblue;
-  text-align: center;
-  margin-top: 1px;
-}
-
-.map {
-    width: 80%;
-    display: block;
-    margin: 0 auto;
-    margin-top: 5%;
-}
-.carte {
-    margin: 50 auto;
-}
-
-.bienvenue {
- font-size: 20px;
- color: aliceblue;
- margin: 05% 10% 10% 10%;
- line-height: 2;
- }
-.wrapper {
-  display: flex;
-  justify-content: center;
-  
-}
-
-.nav-item {
-    display: flex;
-    padding: 10px 45px;
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
-    font-size: 40px;
-    color: white;
-    background: #40A497;
-    transition: 1s;
-    box-shadow: 6px 6px 0 black;
-    transform: skewX(-15deg);
-}
-
-.nav-item:focus {
-   outline: none; 
-}
-
-.nav-item:hover {
-    transition: 0.5s;
-    box-shadow: 10px 10px 0 #FBC638;
-}
-
-.nav-item span:nth-child(2) {
-    transition: 0.5s;
-    margin-right: 0px;
-}
-
-.nav-item:hover  span:nth-child(2) {
-    transition: 0.5s;
-    margin-right: 45px;
-}
-
-  span {
-    transform: skewX(15deg) 
-  }
-
-  span:nth-child(2) {
-    width: 20px;
-    margin-left: 30px;
-    position: relative;
-    top: 12%;
-  }
-  
-/**************SVG****************/
-
-path.one {
-    transition: 0.4s;
-    transform: translateX(-60%);
-}
-
-path.two {
-    transition: 0.5s;
-    transform: translateX(-30%);
-}
-
-.nav-item:hover path.three {
-    animation: color_anim 1s infinite 0.2s;
-}
-
-.nav-item:hover path.one {
-    transform: translateX(0%);
-    animation: color_anim 1s infinite 0.6s;
-}
-
-.nav-item:hover path.two {
-    transform: translateX(0%);
-    animation: color_anim 1s infinite 0.4s;
-}
-
-/* SVG animations */
-
-@keyframes color_anim {
-    0% {
-        fill: white;
-    }
-    50% {
-        fill: #FBC638;
-    }
-    100% {
-        fill: white;
-    }
-}
-
-.chaine {
-    width: 100%;    
+/* Base */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: black;
+  font-family: Arial, sans-serif;
+  color: #333333;
 }
 
-.nav-link {
-    font-size: 20px;
-    font-family: monofonto;
-    color: #FFFA14;
+/* Header */
+header {
+  background-color: var(--primary-color);
+  padding: 10px;
+  background-color: #000;
+}
+.logo {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  height: 10%;
+}
+.Dofus {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  height: 10%;
 }
 
-.nav-item:hover {
-    background: #52789E;
-    color: white;
+@media screen and (max-width: 1024px) {
+  .logo {
+    height: 100px; /* Ajustez la taille du logo selon vos besoins */
+  }
+}
+  @media screen and (max-width: 1024px) {
+  .Dofus {
+    height: 100px; /* Ajustez la taille du logo selon vos besoins */
+  }
+}
+p {
+  text-align: justify;
+}
+nav ul {
+  display:flex;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin-right: 10px;
+}
+nav li {
+  margin: 0 10px;
+  margin-right: 10px;
+  justify-content: center;
+}
+h1 {
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 20px;
+  font-family: 'Achafsex', sans-serif;
+  font-size:55px;
+  color: #E55700;
+}
+/* Boutons */
+button[type="submit"] {
+  display: inline-flexbox;
+  background-color: #7A7A7A;
+  border: none;
+  border-radius: 50px;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  margin-right: 50px;
+  padding: 12px 24px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+  transition: background-color 0.3s ease;
 }
 
-.banniere {
-    width: 100%;
-    position: center;
+button[type="submit"]:hover {
+  background-color: #F44B2D;
+} 
+
+/* Main */
+main {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+section {
+  margin-bottom: 40px;
 }
 
-.navbar-nav {
-    display: flex;
-    justify-content: space-around;
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px
 }
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
+  }
+  .date {
+    font-size: 14px;
+    color: #FFFA5C;
+    margin-left: 10px;
+    }
+    section:first-of-type {
+      background: linear-gradient(to bottom, #E55700, #EB9764);
+      background-color: #B1FF77;
+      border-radius: 10px;
+      margin: 50px 0px -5px;
+      padding: 20px;
+      box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.5);
+    }
+    section:last-of-type {
+      margin-top: 50px;
+    }
+    section:nth-child(2) {
+      background-image: linear-gradient(to bottom, #7A7A7A, #D0D0D0);
+      background-color: #77F9FF;
+      border-radius: 10px;
+      margin: 80px 0px -5px;
+      padding: 20px;
+      box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.5);
+    }
+    footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
 
-/*.nav-item {
-    display: flex;
-    border-radius: 30px;
-    padding: 10px 30px 10px 30px;
-    background: #757575; 
-    color: black;
-}*/
-
-.mecano {
-    width: 20%;
-    float: left;
-}
-
-.TKT{
-    overflow: hidden;
-    position: relative;
-}
-.TKT h3
-{ 
-    color: white;
-    width: 60%;
-    height: 100%;
-    margin: 0%;
-    line-height: 50px;
-    padding-right: 20%;
-    text-align: center; 
- /* Starting position */
- -moz-transform:translateX(100%);
- -webkit-transform:translateX(100%);  
- transform:translateX(100%);
- /* Apply animation to this element */  
- -moz-animation: TKT 15s linear infinite;
- -webkit-animation: TKT 15s linear infinite;
- animation: TKT 10s linear infinite;
-}
-/* Move it (define the animation) */
-@-moz-keyframes TKT {
- 0%   { -moz-transform: translateX(100%); }
- 100% { -moz-transform: translateX(100%); }
-}
-@-webkit-keyframes TKT {
- 0%   { -webkit-transform: translateX(100%); }
- 100% { -webkit-transform: translateX(100%); }
-}
-@keyframes TKT {
- 0%   { 
- -moz-transform: translateX(100%); /* Firefox bug fix */
- -webkit-transform: translateX(100%); /* Firefox bug fix */
- transform: translateX(100%);     
- }
- 100% { 
- -moz-transform: translateX(-100%); /* Firefox bug fix */
- -webkit-transform: translateX(0%); /* Firefox bug fix */
- transform: translateX(0%); 
- }
-
-}
